# herbie-creative

./: .dockerignore  .env.example  .gitattributes  .gitignore  Close App.bat  Close App.sh  Dockerfile  Open App.bat  Open App.sh  README.md  run_app.py
backend/: pyproject.toml
backend/app/: __init__.py  asset_manifest.py  assignment_launch.py  auth_store.py  branding.py  brief_loader.py  campaign_browser.py  cli.py  cli_progress.py  compliance.py  composer.py  config.py  document_text.py  fastapi_fonts.py  fastapi_intake.py  fastapi_jobs.py  finalize.py  gallery.py  mail.py  main.py  pipeline.py  product_fields.py  product_seeds.py  public_examples.py  reports.py  root_path.py  samples.py  schemas.py  sse.py  tenant.py  text_placement.py  thumbs.py  trial.py  user_secrets.py
backend/app/providers/: __init__.py  finalize_suggest.py  fonts.py  openai_editor.py  openai_image.py  openai_responses_image.py  openai_writer.py  pillow_editor.py  xai_video.py
backend/app/storage/: __init__.py  base.py  local.py  paths.py
docs/: DEPLOY_RAILWAY.md
example-outputs/: README.md
frontend/: .gitignore  index.html  package-lock.json  vite.config.ts
how-to/: README.md
sample-briefs/: cardobot-apartment-deck.json  cardobot-hologram-deal.json  cardobot-zoom.json  cardobot.json  jordan-candid-daytime-clara.json  jordan-frozen-moments-candid.json  jordan-frozen-moments.json  jordan-hero-zoom.json  jordan-shattered-backboard-candid.json  smoke-test.json  smoke-test.txt  spitfire-deathmask-br.json  spitfire-deathmask-us.json  spitfire-wheel-closeup-us.json
(+50 files in other folders)
