[project]
name = "creative-automation-backend"
version = "0.1.0"
description = "Creative automation pipeline for social campaigns"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.3",
    "pypdf>=5.0.0",
    "sse-starlette>=3.4.5",
    # Plain uvicorn (no [standard]): httptools/uvloop lack Windows ARM wheels and
    # force a Visual C++ build. Core app does not need them.
    "uvicorn>=0.51.0",
]

[project.optional-dependencies]
# xai-sdk pulls grpcio, which often fails to build on Windows ARM without MSVC.
# Motion still works via HTTP fallback in providers/xai_video.py when this is missing.
motion = [
    "xai-sdk>=1.17.0",
]

[project.scripts]
creative-automation = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
